test/error/error.input72.zc
no loop or switch to break out from on line 1
